--- a/Responsive youtube page/youtube_responsive.html
+++ b/Responsive youtube page/youtube_responsive.html
@@ -18,16 +18,41 @@
     </div>
     <div class="second-header">
       <img class="explore-icon" src="/Icons/explore.svg" />
-      <div class="clases-container">All</div>
-      <div class="clases-container">Gaming</div>
-      <div class="clases-container">Comedy</div>
-      <div class="clases-container">Chess</div>
-      <div class="clases-container">Music</div>
+      <p class="clases-container">All</p>
+      <p class="clases-container">Gaming</p>
+      <p class="clases-container">Comedy</p>
+      <p class="clases-container">Chess</p>
+      <p class="clases-container">Music</p>
     </div>
-    <div class="content">
-      <div class="video-preview">
-        <div class="thumbnail-row"></div>
-        <div class="video-info-grid"></div>
+
+    <div class="video-preview">
+      <div class="thumnnail-row">
+        <img
+          src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+          class="thumbnail"
+        />
+        <div class="timer">43:44</div>
+        <div class="duration-bar"></div>
+      </div>
+      <div class="video-information-grid">
+        <div class="profile-pic">
+          <img
+            class="avatar"
+            src="/Responsive youtube page/Icons/channels1_profile.jpg"
+          />
+        </div>
+        <div class="video-information">
+          <div class="title">
+            The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
+            Nightmares | Gordon Ramsay
+          </div>
+          <div class="video-author-stats">
+            <p class="author-stats">
+              Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+              weeks ago
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
