--- a/Responsive youtube page/youtube_responsive.html
+++ b/Responsive youtube page/youtube_responsive.html
@@ -6,54 +6,273 @@
     <title>Responsive youtube</title>
     <link rel="stylesheet" href="/Responsive youtube page/general.css" />
   </head>
+
   <body>
-    <div class="header">
-      <a href="https://www.youtube.com/" target="_blank">
-        <img id="youtube-logo" src="/Icons/youtube-logo.svg" />
+    <h1>
+      <a
+        class="header-youtube-logo"
+        href="https://www.youtube.com/"
+        target="_blank"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          class="bi bi-youtube youtube-logo"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
+          />
+        </svg>
+        <p class="header-youtube-text">Premium</p>
       </a>
       <div class="right-section">
         <img class="search-icon" src="/Icons/search.svg" />
         <img class="profile-picture" src="/Photos/InfinityV_profile.jpg" />
       </div>
-    </div>
-    <div class="second-header">
+    </h1>
+
+    <h2>
       <img class="explore-icon" src="/Icons/explore.svg" />
-      <p class="clases-container">All</p>
-      <p class="clases-container">Gaming</p>
-      <p class="clases-container">Comedy</p>
-      <p class="clases-container">Chess</p>
-      <p class="clases-container">Music</p>
+      <div class="clases-container">
+        <p class="clases">All</p>
+        <p class="clases">Gaming</p>
+        <p class="clases">Comedy</p>
+        <p class="clases">Chess</p>
+        <p class="clases">Music</p>
+      </div>
+    </h2>
+
+    <div class="video-container">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <a
+            href="https://www.youtube.com/watch?v=IiapD0APZos&t=102s"
+            target="_blank"
+          >
+            <img
+              src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+              class="thumbnail"
+            />
+          </a>
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="video-title">
+              <p class="title">
+                The WORST Chicago Has To Offer! | S2 E12 | Full Episode |
+                Kitchen Nightmares | Gordon Ramsay
+              </p>
+            </div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+                weeks ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            src="/Responsive youtube page/Photos/Thumbnail-2.webp"
+            class="thumbnail"
+          />
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels2_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="title">AM JUCAT MINECRAFT 24 DE ORE (din nou)</div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                SNIK &#x2022; 175K views &#x2022; 1 moth ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+            class="thumbnail"
+          />
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="title">
+              The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
+              Nightmares | Gordon Ramsay
+            </div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+                weeks ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+            class="thumbnail"
+          />
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="title">
+              The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
+              Nightmares | Gordon Ramsay
+            </div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+                weeks ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+            class="thumbnail"
+          />
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="title">
+              The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
+              Nightmares | Gordon Ramsay
+            </div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+                weeks ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            src="/Responsive youtube page/Photos/Thumbnail-1.webp"
+            class="thumbnail"
+          />
+          <div class="timer">43:44</div>
+          <div class="duration-bar"></div>
+        </div>
+        <div class="video-information-grid">
+          <div class="profile-pic">
+            <img
+              class="avatar"
+              src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            />
+          </div>
+          <div class="video-information">
+            <div class="title">
+              The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
+              Nightmares | Gordon Ramsay
+            </div>
+            <div class="video-author-stats">
+              <p class="author-stats">
+                Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
+                weeks ago
+              </p>
+            </div>
+          </div>
+          <div class="three-dots">&#8942;</div>
+        </div>
+      </div>
     </div>
 
-    <div class="video-preview">
-      <div class="thumnnail-row">
-        <img
-          src="/Responsive youtube page/Photos/Thumbnail-1.webp"
-          class="thumbnail"
-        />
-        <div class="timer">43:44</div>
-        <div class="duration-bar"></div>
-      </div>
-      <div class="video-information-grid">
-        <div class="profile-pic">
+    <footer>
+      <div id="Footers">
+        <div class="Home">
           <img
-            class="avatar"
-            src="/Responsive youtube page/Icons/channels1_profile.jpg"
+            src="/Responsive youtube page/Icons/home.svg"
+            class="home-icon"
           />
+          <p class="home-text">Home</p>
         </div>
-        <div class="video-information">
-          <div class="title">
-            The WORST Chicago Has To Offer! | S2 E12 | Full Episode | Kitchen
-            Nightmares | Gordon Ramsay
-          </div>
-          <div class="video-author-stats">
-            <p class="author-stats">
-              Kitchen Nightmares Full Episodes &#x2022; 482 views &#x2022; 3
-              weeks ago
-            </p>
-          </div>
+        <div class="Music">
+          <img
+            src="/Responsive youtube page/Icons/youtube-music.svg"
+            class="music-icon"
+          />
+          <p class="music-text">Music</p>
+        </div>
+        <div class="Subscription">
+          <img
+            src="/Responsive youtube page/Icons/subscriptions.svg"
+            class="subscription-icon"
+          />
+          <p class="subscription-text">subscriptions</p>
+        </div>
+        <div class="Library">
+          <img
+            src="/Responsive youtube page/Icons/library.svg"
+            class="library-icon"
+          />
+          <p class="library-text">Library</p>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
